@startuml Diagramme de classes métiers BD SAE3.01

class Produit {
    + refProduit
    nomProduit
    descProduit
    prixProduit
    qteProduit
    tailleProduit
    couleurProduit
}

class CategTaille {
    tailleSelonAgeEtSexe
}

class GuideTaille {
    + idTaille
    tourPoitrine
    tourDeTaille
    tourBassin
    tailleFr
    tailleACommander
}

class Categorie {
    + idCategorie
    nomCategorie
}

class Client {
    + numClient
    nomClient
    prenomClient
    adresseClient
    mailClient
    codePostalClient
    villeClient
    civiliteClient
    telClient
    mdpClient
}

class Commande {
    + idCommande
    dateCommande
    fraisLivraison
    adrLivraison
    statutCommande
    modePaiement
}

class Paiement {
    + idPaiement
}

class CB {
    + numCb
    nomCb
    moisExpCb
    anneeExpCb
}

class Paypal {
    + idPaypal
    email
}

class VirementBancaire {
    + idVirement

}

class Commander {
    qteCommandee
}

class Avis {
    + idAvis
    commentaire
    note
}

Produit "*" -- "1" Categorie: Appartenir
Paypal "1" -- "1" Paiement : Payer avec Paypal
CB "1" -- "1" Paiement : Payer avec CB
Paiement "1" -- "*" Commande : Régler la commande
Produit "*" - "*" Commande
(Produit, Commande) -- Commander
Commande "*" -- "1" Client: Passer
Avis "*" -- "1" Produit: Concerner
GuideTaille "1" - "*" Produit
(GuideTaille, Produit) -- CategTaille
Avis "*" -- "1" Client: Ecrire
Categorie "*" -- "1" Categorie : Sous-catégorie
VirementBancaire "1" -- "1" Paiement : Payer avec Virement

@enduml
